# tool-compass

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  _version.py  analytics.py  backend_client_mcp.py  backend_client_simple.py  bootstrap.py  chain_indexer.py  cli.py  compass_config.example.json  compass_config.json  config.py  docker-compose.yml  embedder.py  fly.toml  gateway.py  indexer.py  llms.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  (+6 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  pages.yml  publish.yml  release-binaries.yml  release.yml  security.yml  test.yml
data/: security_audit.db
db/: compass_analytics.db-shm  compass_analytics.db-wal
docs/: index.md
npm/: CHANGELOG.md  README.md  package.json
npm/test/: smoke.test.js
scripts/: check-org-urls.sh  regenerate-scorecard.sh  verify-metrics.sh
site/: astro.config.mjs  package-lock.json  package.json
site/src/: site-config.ts
site/src/content/docs/handbook/: architecture.md  beginners.md  configuration.md  getting-started.md  index.md  operations.md  tools.md
site/src/styles/: starlight-custom.css
tests/: __init__.py  conftest.py  test_analytics.py  test_backend_client.py  test_backend_client_simple.py  test_backend_client_simple_coverage.py  test_backend_client_simple_outcomes.py  test_chain_indexer.py  test_cli_coverage.py  test_config.py  test_corruption_recovery.py  test_embedder.py  test_embedder_degradation.py  test_features_v2_2_0.py  test_fuzz.py  test_gateway.py  test_gateway_coverage.py  test_gateway_handlers.py  test_golden_set.py  test_indexer.py  test_regressions_swarm_01.py  test_regressions_swarm_02.py  test_smoke_e2e.py  test_sync_manager.py  test_tool_manifest.py  test_ui.py  test_version.py
tests/golden_set/: __init__.py  deterministic_embedder.py  fixture_corpus.py  queries.yaml
