[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-compass"
version = "2.0.1"
description = "Semantic MCP tool discovery gateway - find tools by intent, not memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mikey Frilot" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "semantic-search",
    "tool-discovery",
    "llm",
    "ai",
    "claude",
    "anthropic",
    "vector-search",
    "hnsw",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "hnswlib>=0.8.0,<1.0.0",
    "numpy>=1.26.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
ui = [
    "gradio>=5.0.0,<7.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "black>=24.0.0",
    "isort>=5.13.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=4.0.0",
]
all = [
    "tool-compass[ui,dev]",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop/tool-compass"
Documentation = "https://github.com/mcp-tool-shop/tool-compass#readme"
Repository = "https://github.com/mcp-tool-shop/tool-compass.git"
Issues = "https://github.com/mcp-tool-shop/tool-compass/issues"
Changelog = "https://github.com/mcp-tool-shop/tool-compass/blob/main/CHANGELOG.md"

[project.scripts]
tool-compass = "tool_compass.gateway:main"
tool-compass-ui = "tool_compass.ui:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "tests/",
    "archive/",
    "db/",
    "data/",
    "htmlcov/",
    ".coverage",
    ".hypothesis/",
    ".pytest_cache/",
    "*.egg-info/",
    "compass_config.json",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "archive/",
    "db/",
    "data/",
    "htmlcov/",
    ".coverage",
    ".hypothesis/",
    ".pytest_cache/",
    "*.egg-info/",
    "compass_config.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["tool_compass"]

[tool.pyright]
include = ["*.py"]
exclude = [
    "**/__pycache__",
    "tests",
    "archive",
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "All"

[tool.bandit]
exclude_dirs = ["tests", "archive"]
skips = ["B101"]  # assert_used - OK in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "setup.py",
    "archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
