[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-compass"
version = "2.3.0"
description = "Semantic MCP tool discovery gateway - find tools by intent, not memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
# Explicit maintainers per PEP 621 — currently the same identity as authors,
# but having both fields populated is the convention for projects where
# authorship and on-call maintenance might diverge (CT-B-019).
maintainers = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "semantic-search",
    "tool-discovery",
    "llm",
    "ai",
    "claude",
    "anthropic",
    "vector-search",
    "hnsw",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Python :: 3.13 classifier intentionally omitted (CT-B-019). hnswlib
    # 0.8.0's cp313 wheel SIGILLs on common runners (see ci.yml matrix
    # comment); re-add once hnswlib ships a working cp313 wheel or
    # IDX-FT-001 lands a pluggable vector backend. `requires-python`
    # still allows install on 3.13 — this only controls PyPI search filters.
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "hnswlib>=0.8.0,<1.0.0",
    "numpy>=1.26.0,<2.2.0",  # <2.2.0: numpy 2.2+ wheels SIGILL on Py 3.13 runners
    "httpx>=0.27.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0",
    # Rich powers the Stage D CLI polish: colored output (4-color discipline),
    # progress spinners on `doctor`/`sync`, and structured help. Always
    # available so the CLI surface is consistent regardless of install extras.
    # Disabled at runtime when stdout is non-TTY, NO_COLOR is set, TERM=dumb,
    # or --no-color is passed — see cli._should_color().
    "rich>=13.0.0,<15.0.0",
]

[project.optional-dependencies]
ui = [
    "gradio>=5.0.0,<7.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.100.0",
]
all = [
    "tool-compass[ui,dev]",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/tool-compass"
Documentation = "https://github.com/mcp-tool-shop-org/tool-compass#readme"
Repository = "https://github.com/mcp-tool-shop-org/tool-compass.git"
Issues = "https://github.com/mcp-tool-shop-org/tool-compass/issues"
Changelog = "https://github.com/mcp-tool-shop-org/tool-compass/blob/main/CHANGELOG.md"

[project.scripts]
# Flat-layout: modules live at the repo root (gateway.py, ui.py, cli.py), not
# in a tool_compass/ subpackage. Entry points reference the top-level modules.
# v2.2.0: `tool-compass` now targets cli:main — a subcommand shell that dispatches
# to gateway/ui/doctor/etc. Legacy `python gateway.py` entry still works.
tool-compass = "cli:main"
tool-compass-ui = "ui:main"

[tool.hatch.build.targets.wheel]
# Explicit module list for hatch under a flat layout. Without this hatch
# would either try to infer a package named `tool_compass` (doesn't exist)
# or bundle stray top-level modules unpredictably.
packages = ["."]
only-include = [
    "gateway.py",
    "ui.py",
    "cli.py",
    "indexer.py",
    "embedder.py",
    "chain_indexer.py",
    "analytics.py",
    "config.py",
    "backend_client_mcp.py",
    "backend_client_simple.py",
    "sync_manager.py",
    "tool_manifest.py",
    "bootstrap.py",
    "_version.py",
    "compass_config.example.json",
    "llms.txt",
]
exclude = [
    "tests/",
    "archive/",
    "db/",
    "data/",
    "htmlcov/",
    ".coverage",
    ".hypothesis/",
    ".pytest_cache/",
    "*.egg-info/",
    "compass_config.json",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "archive/",
    "db/",
    "data/",
    "htmlcov/",
    ".coverage",
    ".hypothesis/",
    ".pytest_cache/",
    "*.egg-info/",
    "compass_config.json",
]

[tool.ruff]
# Per-file ignores for pre-existing patterns scheduled for Stage B/C humanization wave.
# E402: ui.py uses sys.path.insert before imports for flat-layout compatibility.
# E722: bare except in get_filter_choices — will be narrowed in Stage C humanization.
[tool.ruff.lint.per-file-ignores]
"ui.py" = ["E402", "E722"]

[tool.pytest.ini_options]
# Consolidated from former pytest.ini (TST-A-008). Single source of truth.
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]  # Allow imports without sys.path.insert
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -ra"
# Default per-test timeout (TST-B-007). Thread method so even blocking C
# extensions (hnswlib, numpy) can be interrupted.
timeout = 30
timeout_method = "thread"
markers = [
    "integration: marks tests requiring external services (Ollama, backends)",
    "slow: marks tests that take a long time to run",
    "golden: marks the frozen golden-set retrieval benchmark (TS-B-006)",
]
# Narrowed from blanket DeprecationWarning ignore to known-noisy modules only,
# so new deprecations in our own code still surface.
filterwarnings = [
    "ignore::DeprecationWarning:hnswlib",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "bootstrap.py",
    "archive/*",
]

[tool.coverage.report]
# TST-FT-001: 55% floor — temporarily lowered for v2.3.0 to land the
# Wave-11 CLI feature parity (6 new subcommands × ~150 LOC each = +1000
# LOC in cli.py). Smoke tests cover argparse parser correctness for each
# new verb; the delegate functions need gateway-with-index fixtures to
# exercise (planned for v2.4.0). v2.2.x floor was 60 — ratchet back to
# 60 once cli.py coverage is restored.
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
